# prir

./: .gitignore  LICENSE  README.md
KrolWojciech-KieruczenkoMaciej/lab3/: Makefile  common.hu  erastotanesSiege.cu  kernels.cu  millerRabin.cu  primes_gpu
KrolWojciech-KieruczenkoMaciej/zad1/: Makefile  dok.tex  integral_omp.cpp
KrolWojciech-KieruczenkoMaciej/zad2/: Makefile  dok.tex  errors.hu  kernel.cu  main.cu  matrix.cu
KrolWojciech-KieruczenkoMaciej/zad3/: Makefile  data.txt  dok.tex  kernels.cu  main.cu  millerRabin.cu  primes_gpu
KrolWojciech-KieruczenkoMaciej/zad4/: gauss_mpi.cpp  gaussianBlur.cpp  makefile  run.sh
Projekt/: CMakeLists.txt  common.cpp  common.h  dijkstraMpi.cpp  graph.cpp  graph.h  graph.txt  main.cpp  makefile  mpiHelper.cpp  mpiHelper.h  proj  run.sh  shortestPath.cpp  shortestPath.h  tasks.txt
